--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -3,8 +3,16 @@
 <h1>Compose</h1>
 
 <form action="/compose" method="POST">
-    <input type="text" name="title">
-    <button type="submit" name="button">Publish</button>
+
+    <div class="form-group">
+        <label for="postTitle">Title</label>
+        <input class="form-control" type="text" name="postTitle">
+
+        <label for="postContent">Post</label>
+        <textarea class="form-control" name="postContent" id="" cols="30" rows="5"></textarea>
+    </div>
+
+    <button class="btn btn-primary" type="submit" name="button">Publish</button>
 </form>
 
 <%- include('partials/footer'); %>
